...
          onClick={onClose}
          aria-label="Close image"
        >
          &times;
        </button>
        <img
          src={uri}
          alt=""
          className="image-lightbox-img"
          data-testid="image-lightbox-img"
        />
      </Modal>
    </div>
...
